# backendecommerce/swagger-output.json
@@ -404,6 +404,10 @@
                 "type": "string",
                 "example": "ABC-1234"
               },
+              "urlImagen": {
+                "type": "string",
+                "example": "http://example.com/imagen.jpg"
+              },
               "almacen": {
                 "$ref": "#/components/schemas/Almacen"
               },
@@ -1239,7 +1243,7 @@
       "get": {
         "summary": "Lista todas los ciudades con paginación",
         "tags": [
-          "Ciudades"
+          "Ciudad"
         ],
         "responses": {
           "200": {
@@ -1265,7 +1269,7 @@
       "post": {
         "summary": "Crea una nueva ciudad",
         "tags": [
-          "Ciudades"
+          "Ciudad"
         ],
         "requestBody": {
           "required": true,
@@ -1516,11 +1520,11 @@
         }
       }
     },
-    "/direcciones": {
+    "/direccion": {
       "get": {
         "summary": "Lista todas los direcciones con paginación",
         "tags": [
-          "Direcciones"
+          "Direccion"
         ],
         "responses": {
           "200": {
@@ -1546,7 +1550,7 @@
       "post": {
         "summary": "Crea una nueva dirección",
         "tags": [
-          "Direcciones"
+          "Direccion"
         ],
         "requestBody": {
           "required": true,
@@ -4183,6 +4187,9 @@
           },
           "404": {
             "description": "subcategoria no encontrado"
+          },
+          "406": {
+            "description": "Hay productos asociados a esta subcategoría"
           }
         }
       }
@@ -4409,11 +4416,11 @@
         }
       }
     },
-    "/ubicaciones": {
+    "/ubicacion": {
       "get": {
         "summary": "Lista todos los ubicaciones con paginación",
         "tags": [
-          "Ubicaciones"
+          "Ubicacion"
         ],
         "responses": {
           "200": {
@@ -4439,7 +4446,7 @@
       "post": {
         "summary": "Crea una nueva ubicación",
         "tags": [
-          "Ubicaciones"
+          "Ubicacion"
         ],
         "requestBody": {
           "required": true,
@@ -4847,7 +4854,7 @@
       "description": "API para la gestión de bancos"
     },
     {
-      "name": "Ciudades",
+      "name": "Ciudad",
       "description": "API para la gestión de ciudades"
     },
     {
@@ -4926,7 +4933,7 @@
       "description": "API para tipo de productos"
     },
     {
-      "name": "Ubicaciones",
+      "name": "Ubicacion",
       "description": "API para la gestión de ubicaciones"
     },
     {
